2008-02-08  Martin Leidig  <mleidig@schlund.de>

	Added OXM serializer for java.util.Properties, which is used
	by default (until now the MapSerializer was used) and produces
	property elements with key/value attributes.
	Added OXM serializer for java.lang.Class, which just outputs
	the canonical name.
	For java.net.URI, java.net.URL and java.io.File the
	ObjectToStringSerializer is used by default (which just uses
	the object's toString() method).

	Modified:
	* src/de/schlund/pfixcore/oxm/impl/SerializerRegistry.java
	* src/de/schlund/pfixcore/oxm/impl/ClassNameMapping.java
	* tests/junit/de/schlund/pfixcore/oxm/Test.java
	* tests/junit/de/schlund/pfixcore/oxm/testcomplex.xml
	* tests/junit/de/schlund/pfixcore/oxm/ComplexTestBean.java

	Added:
	* src/de/schlund/pfixcore/oxm/impl/serializers/ClassSerializer.java
	* src/de/schlund/pfixcore/oxm/impl/serializers/PropertiesSerializer.java

2008-02-07  Martin Leidig  <mleidig@schlund.de>

	* .classpath: Added classpath variable PFX_TOOLS_LIB, which has to
	be set to the tools.jar from the JDK installation. If the tools.jar
	has already bean added as system library to the current JRE in Eclipse
	it has to be removed (as your project won't build with the same
	library added twice to the build path). 

2008-02-07  Martin Leidig  <mleidig@schlund.de>

	Added Enum support to Object-to-XML mapping. Both simple enums, only
	with constant names, and complex enums, having bean-style properties,
	are supported. Besides added some unit tests for the OXM stuff. 
	
	The new XMLUtils class adds some useful methods for DOM handling,
	e.g. building an XPath expression from a DOM node and an
	assertEquals method which can be used in unit tests to compare
	DOM documents or nodes.

	Modified:
	* src/de/schlund/pfixcore/oxm/MarshallingException.java
	* src/de/schlund/pfixcore/oxm/impl/SerializerRegistry.java
	* src/de/schlund/pfixcore/oxm/impl/serializers/BeanSerializer.java
	* src/de/schlund/pfixcore/oxm/impl/SerializationException.java