@@ -1,3 +1,11 @@
+2008-02-19  Martin Leidig  <mleidig@schlund.de>
+
+	* src/de/schlund/pfixxml/DerefServlet.java: Omit the explicit setting 
+	of the http/https default ports 80/443 in the relocation URL (only set
+	the  non-default ports). Because the ports become part of the Host header 
+	sent by the clients, this has to be considered when you're writing Apache
+	rewrite rules (and some users complained about the superfluous ports).
+
 2008-02-08  Martin Leidig  <mleidig@schlund.de>
 
 	Added OXM serializer for java.util.Properties, which is used
